Disabled streaming to visualizer, enabled database batch insert of live streams, Changed the parallelism for awesome performance of query 1..